--- a/data-512-a1/hcds-a1-data-curation.ipynb
+++ b/data-512-a1/hcds-a1-data-curation.ipynb
@@ -26,7 +26,13 @@
    "source": [
     "# DATA 512\n",
     "\n",
-    "## Assignment 1: Data Curation"
+    "## Assignment 1: Data Curation\n",
+    "\n",
+    "The purpose of this assignment is to demonstrate the common task an analyst faces when combining data from multiple data sources for study.\n",
+    "\n",
+    "The Wikimedia Page Views and legacy Page Count data is available for different time periods, and the Page Views data has more information about the kind of website access.\n",
+    "\n",
+    "### Download and Store the Page Views Data From Wikimedia"
    ]
   },
   {
@@ -86,8 +92,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Get the Page Counts Data\n",
     "\n",
-    "Convert the JSON files into Pandas dataframes and join them together on date"
+    "Like the Page Views data, get the legacy Page Counts data, and store in a JSON file."
    ]
   },
   {
