--- a/data-512-a1/hcds-a1-data-curation.ipynb
+++ b/data-512-a1/hcds-a1-data-curation.ipynb
@@ -24,15 +24,15 @@
     "collapsed": true
    },
    "source": [
-    "# DATA 512\n",
-    "\n",
-    "## Assignment 1: Data Curation\n",
+    "# DATA 512 Assignment 1: Data Curation\n",
     "\n",
     "The purpose of this assignment is to demonstrate the common task an analyst faces when combining data from multiple data sources for study.\n",
     "\n",
     "The Wikimedia Page Views and legacy Page Count data is available for different time periods, and the Page Views data has more information about the kind of website access.\n",
     "\n",
-    "### Download and Store the Page Views Data From Wikimedia"
+    "## Download and Store the Page Views Data From Wikimedia\n",
+    "\n",
+    "Perform an api call to retrieve data for each access type and store each in separate files."
    ]
   },
   {
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get the Page Counts Data\n",
+    "## Get The Legacy Page Counts Data\n",
     "\n",
     "Like the Page Views data, get the legacy Page Counts data, and store in a JSON file."
    ]
@@ -134,7 +134,7 @@
     "collapsed": true
    },
    "source": [
-    "### Prepare the Page View Data\n",
+    "## Prepare the Page View Data\n",
     "\n",
     "1. Create columns for year and month from the timestamp field. \n",
     "2. Combine the access mobile-app and mobile-web columns into one by adding them together.\n",
@@ -180,7 +180,7 @@
     "collapsed": false
    },
    "source": [
-    "### Transform the Page Count Data\n",
+    "## Transform the Page Count Data\n",
     "\n",
     "Following the same guidelines as the Page View data, prepare the Page Count data"
    ]
@@ -207,7 +207,7 @@
     "collapsed": false
    },
    "source": [
-    "### Merge Datasets\n",
+    "## Merge Datasets\n",
     "\n",
     "Now we have two datasets both aggregated on year and month. We will perform a full outer join on them to combine them into one dataset, keeping all rows. \n",
     "\n",
@@ -234,7 +234,7 @@
     "collapsed": false
    },
    "source": [
-    "### Plot the Results\n",
+    "## Plot the Results\n",
     "\n",
     "Using matplotlib, we now show the data with each access type available as a different colored line on a graph. You will be able to see how the data overlaps for 13 months, and the different timeframes for each kind of page count/view method."
    ]
