--- a/HCDS Project Proposal.ipynb
+++ b/HCDS Project Proposal.ipynb
@@ -5,11 +5,13 @@
    "metadata": {},
    "source": [
     "# Mass Shootings in the United States:\n",
-    "## A study to overcome long held biases about gun violence.\n",
+    "### *A study to overcome long-held biases about gun violence.*\n",
     "\n",
-    "#### October 9th, 2017\n",
     "\n",
-    "#### Andrew Smith (ucalegon@uw.edu)\n",
+    "\n",
+    "*November 9th, 2017*\n",
+    "\n",
+    "*Andrew Smith (ucalegon@uw.edu)*\n",
     "\n",
     "\n",
     "### Introduction\n",
@@ -22,35 +24,108 @@
     "\n",
     "3) How easy it is to obtain a gun in the United States, compared to other things which are far less deadly, like a driver's license.\n",
     "\n",
-    "There is a deep divide in the United States about if the existence of so many guns has anything to do with the frequency of mass shootings. Some say when we focus on mass shootings, we forget about all the murders that happen with guns, the accidents, and suicides, and that we are missing the point.  \n",
+    "There is a deep divide in the United States about if the existence of so many guns has anything to do with the frequency of mass shootings. Some say when we focus on mass shootings, we forget about all the murders that happen with guns, the accidents, and suicides, and that we are missing the point. \n",
+    "\n",
     "\n",
     "### Purpose\n",
     "\n",
-    "My purpose is to uncover any truths surrounding the gun \"issue\" in the United States as it relates to mass shootings only. Is it really, as many right-wing politicians say, only a mental-health issue? Some say it isn't a white male problem, and they point to the DC snipers.\n",
+    "My purpose is to uncover any truths surrounding the gun \"issue\" in the United States as it relates to mass shootings only. Is it really, as many right-wing politicians say, only a mental-health issue? Some say it isn't a white male problem, and they deflect, pointing to the Washington DC snipers who were both African American, the Virginia Tech shooter who was South Korean.\n",
+    "\n",
+    "The deflection continues, with some lawmakers saying trucks are used to kill, so, as the logic goes, should we ban trucks?\n",
+    "\n",
+    "My hope is that I will show how ridiculous some of these statements are. Before embarking on this research, I already believe the sheer number of untrained, unlicensed, well-armed, angry people in this country are making the United States a terrorized country from within, nevermind the external threat of terrorism, and its impact across the culture is a chilling affect affecting quality of life.\n",
+    "\n",
+    "### Definitions\n",
+    "\n",
+    "Who qualifies as a mass shooter is a hotly debated topic. What qualifies as a mass shooting also is a blurry issue. The FBI, Congressional Research Office, municipal police departments, all collect data differently, all have slightly different definitions. By some measures, in 2015 we had 355 mass shootings according to the Washington Post, and another, Mother Jones, only four.\n",
+    "\n",
+    "The first most commonly held definition is by the Federal Bureau of Investigation: \n",
+    "\n",
+    "\"public mass shooting\" as one in which four or more people selected indiscriminately, not including the perpetrator, are killed.\n",
+    "    \n",
+    "This definition would exclude a 1 AM gang shootout at IHOP in Chicago in which four people are killed, and a grandmother killing her entire family of four in White Center in 2010. It *would* include a man entering a movie theater and killing dozens of random people in Aurora, Colo.\n",
+    "    \n",
+    "All these definitions wrestle with the following problems when defining a mass shooting:\n",
+    "\n",
+    "1. Over what period of time is the distribution of individual killings? All in the span of several hours with no \"cooling off period\"? What is the geographic distribution? A music venue, an entire city? \n",
+    "\n",
+    "2. Are we confusing mass shooters with mass shootings? These are not neccessarily events which are perpetrated by only one person per incident. Should we focus on shooters or shootings?\n",
+    "\n",
+    "3. How many people have to be killed, for the incident to be called a mass shooting? \n",
+    "\n",
+    "4. Are the victims related to the shooters in any way? Are they relatives, friends, close co-workers, or complete strangers?\n",
+    "\n",
+    "For my purposes, I will be using the FBI's fairly loosely defined definition, with the understanding that it has changed over time, and will be applying this definition retroactively upon the data that has been collected, but only to eliminate instances that do not meet this definition. \n",
     "\n",
     "### Hypotheses\n",
     "\n",
-    "H0: The number of shooters who are white males is inversely correlated to the share of the population over time.\n",
+    "##### H0: The number of mass shooters who are white males is inversely correlated to the share of the population over time.\n",
     "\n",
-    "    I would like to determine if perhaps there is social pressure on white males, with other races taking a larger share of the \n",
+    "I would like to determine if perhaps there is social pressure on white males, with other races taking a larger share of the population over time. \n",
     "\n",
-    "H1: White males are more likely to murder more people during mass shootings than other races. \n",
+    "##### H1: White males are more likely to murder more people during mass shootings than other races. \n",
     "\n",
-    "H2: Mass shooters more likely to suffer from mental illness.\n",
+    "Has the description of a mass shooting which has changed over time, unfairly painted white males as a public menace.\n",
     "\n",
-    "H3. White, male, mass shooters are more likely to suffer from mental illness.\n",
+    "##### H2: Mass shooters more likely to suffer from mental illness.\n",
     "\n",
-    "H4: Mass murderers from all races are equally likely to use gun violence.\n",
+    "    Some would say, anyone willing to kill is suffering from mental illness, but I'm looking for evidence in their behavior, whether or not they were seen by a mental health professional.\n",
+    "\n",
+    "##### H3. White, male, mass shooters are more likely to suffer from mental illness.\n",
+    "\n",
+    "##### H4: Mass murderers from all races are equally likely to use gun violence.\n",
+    "\n",
+    "    Is the weapon of choice by white male mass shooters different than shooters of other races?\n",
     "\n",
     "### Data\n",
     "\n",
-    "Mother Jones\n",
-    "US Mass Shootings Dataset on Kaggle\n",
+    "I will be drawing from several datasets, to cover the various hypotheses. I will be doing so because there is no central repository of mass shootings in the United States.\n",
+    "\n",
+    "Mother Jones http://www.motherjones.com/politics/2012/12/mass-shootings-mother-jones-full-data/\n",
+    "\n",
+    "US Mass Shootings Dataset on Kaggle https://www.kaggle.com/zusmani/us-mass-shootings-last-50-years\n",
+    "\n",
+    "Data.gov Crimes in Chicago Dataset https://catalog.data.gov/dataset/crimes-2001-to-present-398a4\n",
+    "\n",
     "\n",
     "### Methods\n",
     "\n",
-    "I will be using Python to clean, analyze and transform the data from Mother Jones and Kaggle. \n",
-    "\n"
+    "I will be using Python to clean, analyze and transform the data from Mother Jones, Kaggle, and Chicago crime data from Data.gov. Because there is no one source for mass shooting data, there are some concerns about the selection bias of each source of data.\n",
+    "\n",
+    "I will be combining sources of mass shottings into one dataset. This will be to union mass shooting incidents.\n",
+    "\n",
+    "To understand the selection bias in the data, I will be looking at the following aspects and how they differ between datasets:\n",
+    "\n",
+    "1. The geographic distributions of the data between datasets.\n",
+    "\n",
+    "2. The types of weapons used (handgun/shotgun/rifle(bolt/pump/semi-automatic)), how they are represented.\n",
+    "\n",
+    "3. The relative proportions of races, genders of those shooters represented between shooter datasets.\n",
+    "\n",
+    "4. The time periods covered, and if there are any large gaps.\n",
+    "\n",
+    "5. How the different definitions of mass shootings has changed over time within each dataset.\n",
+    "\n",
+    "\n",
+    "### References\n",
+    "\n",
+    "Mass shooting. (2017, November 07). Retrieved November 09, 2017, from https://en.wikipedia.org/wiki/Mass_shooting \n",
+    "\n",
+    "G. (2016, June 13). Assault Weapons Ban: A Dumb Idea Pushed By Dumb People. Retrieved November 09, 2017, from http://thefederalist.com/2016/06/13/the-assault-weapons-ban-is-a-stupid-idea-pushed-by-stupid-people/\n",
+    "\n",
+    "Crimes - 2001 to present. (2017, November 07). Retrieved November 09, 2017, from https://catalog.data.gov/dataset/crimes-2001-to-present-398a4\n",
+    "\n",
+    "Follman, M., Aronsen, G., & Pan, D. (2017, November 05). US mass shootings, 1982-2017: Data from Mother Jones' investigation. Retrieved November 09, 2017, from http://www.motherjones.com/politics/2012/12/mass-shootings-mother-jones-full-data\n",
+    "\n",
+    "FBI Releases Study on Active Shooter Incidents. (2014, September 24). Retrieved November 09, 2017, from https://www.fbi.gov/news/stories/fbi-releases-study-on-active-shooter-incidents\n",
+    "\n",
+    "STAFF, C. M. (n.d.). Family: Grandmother in shooting spree battled schizophrenia. Retrieved November 09, 2017, from http://www.seattlepi.com/local/article/Family-Grandmother-in-shooting-spree-battled-884335.php \n",
+    "\n",
+    "Follman, M. (2015, December 03). Opinion | How Many Mass Shootings Are There, Really? Retrieved November 09, 2017, from https://www.nytimes.com/2015/12/04/opinion/how-many-mass-shootings-are-there-really.html \n",
+    "\n",
+    "50 years of U.S. mass shootings: The victims, sites, killers and weapons. (n.d.). Retrieved November 09, 2017, from https://www.washingtonpost.com/graphics/national/mass-shootings-in-america/ \n",
+    "\n",
+    "FBI Mass Shooting Report Can Be Misleading. (n.d.). Retrieved November 09, 2017, from http://time.com/3432950/fbi-mass-shooting-report-misleading/ "
    ]
   },
   {
