--- a/HCDS Project Proposal.ipynb
+++ b/HCDS Project Proposal.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mass Shootings in the United States:\n",
+    "# Mass Shootings In The United States:\n",
     "### *A study to overcome long-held biases about gun violence.*\n",
     "\n",
     "\n",
