--- a/HCDS Project Proposal.ipynb
+++ b/HCDS Project Proposal.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "### Introduction\n",
     "\n",
-    "Mass shootings in the United States since 1999 have seemed to the average person to become alarmingly frequent. There are those among the populace who say people will always find a way to kill, ignoring things like: \n",
+    "Mass shootings in the United States since 1999 have become alarmingly frequent, and they are happenning at an increasing rate [1]. Others would dismiss this problem for reasons as simple as where they get their news, or if  In every case when there is a mass shooting, there are impassioned calls to ban guns here in the United States. However, there are many people who do not consider mass shootings a problem. These people say an \"evil\" person will always find a way to kill [2], ignoring things like: \n",
     "\n",
     "1) How easy is it to kill many people with weapons other than guns? \n",
     "\n",
@@ -24,38 +24,42 @@
     "\n",
     "3) How easy it is to obtain a gun in the United States, compared to other things which are far less deadly, like a driver's license.\n",
     "\n",
-    "There is a deep divide in the United States about if the existence of so many guns has anything to do with the frequency of mass shootings. Some say when we focus on mass shootings, we forget about all the murders that happen with guns, the accidents, and suicides, and that we are missing the point. \n",
+    "There is a deep divide in the United States about if the existence of so many guns has anything to do with the frequency of mass shootings. Some say when we focus on mass shootings, we forget about all the ordinary murders that happen with guns, the accidents, and suicides, and that we are missing the point. \n",
     "\n",
     "\n",
-    "### Purpose\n",
+    "### Purpose and Background\n",
     "\n",
-    "My purpose is to uncover any truths surrounding the gun \"issue\" in the United States as it relates to mass shootings only. Is it really, as many right-wing politicians say, only a mental-health issue? Some say it isn't a white male problem, and they deflect, pointing to the Washington DC snipers who were both African American, the Virginia Tech shooter who was South Korean.\n",
+    "My purpose is to uncover any truths surrounding the gun \"issue\" in the United States as it relates to mass shootings only. Is it really, as many right-wing politicians say, only a mental-health issue? Some say it isn't a white male problem, and they deflect, pointing to the Washington DC snipers who were both African American, the Virginia Tech shooter who was South Korean. \n",
     "\n",
-    "The deflection continues, with some lawmakers saying trucks are used to kill, so, as the logic goes, should we ban trucks?\n",
+    "The deflection continues, with some lawmakers saying trucks are used to kill, so, as the logic goes, should we ban trucks? Others say that people will still find guns illegally, and that any attempt to control guns will only hurt law-abiding gun owners. It has been shown that mass killings in the United States are most often carried out with guns, usually handguns, most of them obtained legally [3].\n",
     "\n",
-    "My hope is that I will show how ridiculous some of these statements are. Before embarking on this research, I already believe the sheer number of untrained, unlicensed, well-armed, angry people in this country are making the United States a terrorized country from within, nevermind the external threat of terrorism, and its impact across the culture is a chilling affect affecting quality of life.\n",
+    "The intransigence against even attempting to research *if* there is a problem with gun violence reached a nadir in 1997. Congress cut funding for the CDC by the exact amount that had been spent on gun research in the year before, citing the CDC should be prevented from doing any research that \"advocate or promote gun control\". [4] This put a chilling affect on gun violence research for over a decade. The fact that there is single place where you can go to find complete data on this gun violence has something to do with how taboo it is seen by many officials.\n",
+    "\n",
+    "My hope is that I will show how ridiculous the intransigence is. Before embarking on this research, I already believe the sheer number of untrained, unlicensed, well-armed, angry people in this country are making the United States a terrorized country from within, nevermind the external threat of terrorism, and its impact across the culture is a chilling affect affecting everyone's quality of life.\n",
     "\n",
     "### Definitions\n",
     "\n",
-    "Who qualifies as a mass shooter is a hotly debated topic. What qualifies as a mass shooting also is a blurry issue. The FBI, Congressional Research Office, municipal police departments, all collect data differently, all have slightly different definitions. By some measures, in 2015 we had 355 mass shootings according to the Washington Post, and another, Mother Jones, only four.\n",
+    "Who qualifies as a mass shooter is a hotly debated topic. [5] What qualifies as a mass shooting also is a blurry issue. The FBI, Congressional Research Office, municipal police departments, all collect data differently, all have slightly different definitions. By some measures, in 2015 we had 355 mass shootings according to the Washington Post, and another, Mother Jones, only four in 2015 [6]. \n",
     "\n",
-    "The first most commonly held definition is by the Federal Bureau of Investigation: \n",
+    "The first most commonly held definition is by the Federal Bureau of Investigation [7]: \n",
     "\n",
-    "\"public mass shooting\" as one in which four or more people selected indiscriminately, not including the perpetrator, are killed.\n",
+    "> \"public mass shooting\" as one in which four or more people selected indiscriminately, not including the perpetrator, are killed.\n",
     "    \n",
-    "This definition would exclude a 1 AM gang shootout at IHOP in Chicago in which four people are killed, and a grandmother killing her entire family of four in White Center in 2010. It *would* include a man entering a movie theater and killing dozens of random people in Aurora, Colo.\n",
+    "This definition would exclude a 1 AM gang shootout at IHOP in Chicago in which four people are killed, and a grandmother killing her entire family of four in White Center in 2010 [8]. It *would* include a man entering a movie theater and killing dozens of random people in Aurora, Colo.\n",
     "    \n",
-    "All these definitions wrestle with the following problems when defining a mass shooting:\n",
+    "All these definitions wrestle with the following __problems__ when defining a mass shooting [9]:\n",
     "\n",
-    "1. Over what period of time is the distribution of individual killings? All in the span of several hours with no \"cooling off period\"? What is the geographic distribution? A music venue, an entire city? \n",
+    "1. Over what period of time is the distribution of individual killings? All in the span of several hours with no \"cooling off period\"? \n",
     "\n",
-    "2. Are we confusing mass shooters with mass shootings? These are not neccessarily events which are perpetrated by only one person per incident. Should we focus on shooters or shootings?\n",
+    "2. What is the geographic distribution of a mass shooting? A music venue, an entire city? \n",
     "\n",
-    "3. How many people have to be killed, for the incident to be called a mass shooting? \n",
+    "3. Are we confusing mass shooters with mass shootings? These are not neccessarily events which are perpetrated by only one person per incident. Should we focus on shooters or shootings?\n",
     "\n",
-    "4. Are the victims related to the shooters in any way? Are they relatives, friends, close co-workers, or complete strangers?\n",
+    "4. How many people have to be killed, for the incident to be called a mass shooting? \n",
     "\n",
-    "For my purposes, I will be using the FBI's fairly loosely defined definition, with the understanding that it has changed over time, and will be applying this definition retroactively upon the data that has been collected, but only to eliminate instances that do not meet this definition. \n",
+    "5. Are the victims related to the shooters in any way? Are they relatives, friends, close co-workers, or complete strangers?\n",
+    "\n",
+    "For my purposes, I will be using the FBI's fairly loosely-defined definition, with the understanding that it has changed over time, and will be applying this definition retroactively upon the data that has been collected, but only to eliminate instances that do not meet this definition. \n",
     "\n",
     "### Hypotheses\n",
     "\n",
@@ -69,23 +73,29 @@
     "\n",
     "##### H2: Mass shooters more likely to suffer from mental illness.\n",
     "\n",
-    "    Some would say, anyone willing to kill is suffering from mental illness, but I'm looking for evidence in their behavior, whether or not they were seen by a mental health professional.\n",
+    "Some would say, anyone willing to kill is suffering from mental illness, but I'm looking for evidence in their behavior, whether or not they were seen by a mental health professional.\n",
     "\n",
     "##### H3. White, male, mass shooters are more likely to suffer from mental illness.\n",
     "\n",
     "##### H4: Mass murderers from all races are equally likely to use gun violence.\n",
     "\n",
-    "    Is the weapon of choice by white male mass shooters different than shooters of other races?\n",
+    "Is the weapon of choice by white male mass shooters different than shooters of other races?\n",
     "\n",
     "### Data\n",
     "\n",
     "I will be drawing from several datasets, to cover the various hypotheses. I will be doing so because there is no central repository of mass shootings in the United States.\n",
     "\n",
-    "Mother Jones http://www.motherjones.com/politics/2012/12/mass-shootings-mother-jones-full-data/\n",
+    "###### Mother Jones http://www.motherjones.com/politics/2012/12/mass-shootings-mother-jones-full-data/\n",
     "\n",
-    "US Mass Shootings Dataset on Kaggle https://www.kaggle.com/zusmani/us-mass-shootings-last-50-years\n",
+    "Mother Jones manages a database they say is a ultimate source of the 92 mass shootings that have occurred in the U.S. since 1982.\n",
     "\n",
-    "Data.gov Crimes in Chicago Dataset https://catalog.data.gov/dataset/crimes-2001-to-present-398a4\n",
+    "###### US Mass Shootings Dataset on Kaggle https://www.kaggle.com/zusmani/us-mass-shootings-last-50-years\n",
+    "\n",
+    "This dataset on Kaggle contains 320 \"mass shootings\" since 1966.\n",
+    "\n",
+    "###### Data.gov Crimes in Chicago Dataset https://catalog.data.gov/dataset/crimes-2001-to-present-398a4\n",
+    "\n",
+    "This dataset managed by the City of Chicago, I hope will help me identify FBI-defined mass shooting incidents that are not in the other two sources, mainly.\n",
     "\n",
     "\n",
     "### Methods\n",
@@ -107,25 +117,28 @@
     "5. How the different definitions of mass shootings has changed over time within each dataset.\n",
     "\n",
     "\n",
+    "\n",
     "### References\n",
     "\n",
-    "Mass shooting. (2017, November 07). Retrieved November 09, 2017, from https://en.wikipedia.org/wiki/Mass_shooting \n",
+    "1. Mass shooting. (2017, November 07). Retrieved November 09, 2017, from https://en.wikipedia.org/wiki/Mass_shooting \n",
     "\n",
-    "G. (2016, June 13). Assault Weapons Ban: A Dumb Idea Pushed By Dumb People. Retrieved November 09, 2017, from http://thefederalist.com/2016/06/13/the-assault-weapons-ban-is-a-stupid-idea-pushed-by-stupid-people/\n",
+    "2. G. (2016, June 13). Assault Weapons Ban: A Dumb Idea Pushed By Dumb People. Retrieved November 09, 2017, from http://thefederalist.com/2016/06/13/the-assault-weapons-ban-is-a-stupid-idea-pushed-by-stupid-people/\n",
     "\n",
-    "Crimes - 2001 to present. (2017, November 07). Retrieved November 09, 2017, from https://catalog.data.gov/dataset/crimes-2001-to-present-398a4\n",
+    "3. 50 years of U.S. mass shootings: The victims, sites, killers and weapons. (n.d.). Retrieved November 09, 2017, from https://www.washingtonpost.com/graphics/national/mass-shootings-in-america/ \n",
     "\n",
-    "Follman, M., Aronsen, G., & Pan, D. (2017, November 05). US mass shootings, 1982-2017: Data from Mother Jones' investigation. Retrieved November 09, 2017, from http://www.motherjones.com/politics/2012/12/mass-shootings-mother-jones-full-data\n",
+    "4. Rivara, Fred, Dr., Seattle Children's Hospital (2015, April 15th) In person interview.\n",
     "\n",
-    "FBI Releases Study on Active Shooter Incidents. (2014, September 24). Retrieved November 09, 2017, from https://www.fbi.gov/news/stories/fbi-releases-study-on-active-shooter-incidents\n",
+    "5. Crimes - 2001 to present. (2017, November 07). Retrieved November 09, 2017, from https://catalog.data.gov/dataset/crimes-2001-to-present-398a4\n",
     "\n",
-    "STAFF, C. M. (n.d.). Family: Grandmother in shooting spree battled schizophrenia. Retrieved November 09, 2017, from http://www.seattlepi.com/local/article/Family-Grandmother-in-shooting-spree-battled-884335.php \n",
+    "6. Follman, M. (2015, December 03). Opinion | How Many Mass Shootings Are There, Really? Retrieved November 09, 2017, from https://www.nytimes.com/2015/12/04/opinion/how-many-mass-shootings-are-there-really.html \n",
     "\n",
-    "Follman, M. (2015, December 03). Opinion | How Many Mass Shootings Are There, Really? Retrieved November 09, 2017, from https://www.nytimes.com/2015/12/04/opinion/how-many-mass-shootings-are-there-really.html \n",
+    "7. Follman, M., Aronsen, G., & Pan, D. (2017, November 05). US mass shootings, 1982-2017: Data from Mother Jones' investigation. Retrieved November 09, 2017, from http://www.motherjones.com/politics/2012/12/mass-shootings-mother-jones-full-data\n",
     "\n",
-    "50 years of U.S. mass shootings: The victims, sites, killers and weapons. (n.d.). Retrieved November 09, 2017, from https://www.washingtonpost.com/graphics/national/mass-shootings-in-america/ \n",
+    "8. STAFF, C. M. (n.d.). Family: Grandmother in shooting spree battled schizophrenia. Retrieved November 09, 2017, from http://www.seattlepi.com/local/article/Family-Grandmother-in-shooting-spree-battled-884335.php \n",
     "\n",
-    "FBI Mass Shooting Report Can Be Misleading. (n.d.). Retrieved November 09, 2017, from http://time.com/3432950/fbi-mass-shooting-report-misleading/ "
+    "9. FBI Mass Shooting Report Can Be Misleading. (n.d.). Retrieved November 09, 2017, from http://time.com/3432950/fbi-mass-shooting-report-misleading/ \n",
+    "\n",
+    "\n"
    ]
   },
   {
