--- a/HCDS Project Proposal.ipynb
+++ b/HCDS Project Proposal.ipynb
@@ -1,4 +1,4 @@
- {
+{
  "cells": [
   {
    "cell_type": "markdown",
@@ -16,7 +16,7 @@
     "\n",
     "### Introduction\n",
     "\n",
-    "Mass shootings in the United States since 1999 have become alarmingly frequent, and they are happenning at an increasing rate [1]. Others would dismiss this problem for reasons as simple as where they get their news, or if they happen to own guns.  In every case when there is a mass shooting, there are impassioned calls to ban guns in the United States, with gun-control advocates enthusiastically sharing comparisons of the U.S. other countries. However, there are many people who do not consider mass shootings a problem. These people say an \"evil\" person will always find a way to kill [2], ignoring things like: \n",
+    "Mass shootings in the United States since 1999 have become alarmingly frequent, and they are happenning at an increasing rate [1]. Others would dismiss this problem for reasons as simple as where they get their news, or if they happen to own guns.  In every case when there is a mass shooting, there are impassioned calls to ban guns in the United States, with gun-control advocates enthusiastically sharing comparisons of the U.S. to other countries where mass shootings do not happen. Frustratingly, there are many people who do not consider mass shootings a problem. These people say an \"evil\" person will always find a way to kill [2], ignoring things like: \n",
     "\n",
     "1) How easy is it to kill many people with weapons other than guns? \n",
     "\n",
