--- a/HCDS Project Proposal.ipynb
+++ b/HCDS Project Proposal.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "##### H1: White males are more likely to murder more people during mass shootings than other races. \n",
     "\n",
-    "Has the description of a mass shooting which has changed over time, unfairly painted white males as a public menace.\n",
+    "Has the description of a mass shooting which has changed over time, unfairly painted white males as a public menace?\n",
     "\n",
     "##### H2: Mass shooters more likely to suffer from mental illness.\n",
     "\n",
