--- a/HCDS Project Proposal.ipynb
+++ b/HCDS Project Proposal.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "2) How likely a person would commit murder if they did not have a gun?\n",
     "\n",
-    "3) How easy it is to obtain a gun in the United States, compared to other things which are far less deadly, like a driver's license.\n",
+    "3) How easy it is to obtain a gun in the United States, compared to other things which are far less deadly, like a passport.\n",
     "\n",
     "There is a deep divide in the United States about if the existence of so many guns has anything to do with the frequency of mass shootings. Some say when we focus on mass shootings, we forget about all the ordinary murders that happen with guns, the accidents, and suicides, and that we are missing the point. \n",
     "\n",
