--- a/HCDS Project Proposal.ipynb
+++ b/HCDS Project Proposal.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Mass shootings in the United States since 1999 have become alarmingly frequent, and they are happenning at an increasing rate [1]. Others would dismiss this problem for reasons as simple as where they get their news, or if they happen to own guns.  In every case when there is a mass shooting, there are impassioned calls to ban guns in the United States, with gun-control advocates enthusiastically sharing comparisons of the U.S. to other countries where mass shootings do not happen. Frustratingly, there are many people who do not consider mass shootings a problem. They oftentimes belittle the lack of knowledge about guns by gun-control advocates, making fun of them, minimizing or ignoring the purpose of guns, deflecting, saying an \"evil\" person will always find a way to kill [2]. These gun enthusiasts ignore or avoid simple questions such as: \n",
     "\n",
-    "1) How easy is it to kill many people with weapons other than guns? \n",
+    "1) How easy is it to kill many people quickly with weapons other than guns? \n",
     "\n",
     "2) How likely a person would commit murder if they did not have a gun?\n",
     "\n",
@@ -35,7 +35,7 @@
     "\n",
     "The intransigence against even attempting to research *if* there is a problem with gun violence reached a nadir in 1997. Congress cut funding for the CDC by the exact amount that had been spent on gun research in the year before, citing the CDC should be prevented from doing any research that \"advocate or promote gun control\". [4] This put a chilling affect on gun violence research for over a decade. The fact that there is not a single place where you can go to find complete data on gun violence has something to do with how taboo it is seen by many public officials in the U.S.\n",
     "\n",
-    "My hope is that I will show how ridiculous the intransigence is. Before embarking on this research, I already believe the sheer number of untrained, unlicensed, well-armed, angry people in this country are making the United States a terrorized country from within, nevermind the external threat of terrorism, and its impact across the culture is a chilling affect affecting everyone's quality of life.\n",
+    "My hope is that I will show how ridiculous the intransigence is. Before embarking on this research, I already believe the sheer number of untrained, unlicensed, well-armed, angry people in this country are making the United States a terrorized country from within, nevermind the external threat of terrorism, and its impact across the culture is a chilling affect affecting everyone's quality of life. My experience visiting Las Vegas a week after the worst mass shooting in history chilled my heart. Witnessing first hand the field upon which so many people had died or had been wounded, knowing I could have been one of them had the shooting happened a week later, motivated me to write about and research this topic.\n",
     "\n",
     "### Definitions\n",
     "\n",
