--- a/HCDS Project Proposal.ipynb
+++ b/HCDS Project Proposal.ipynb
@@ -29,13 +29,15 @@
     "\n",
     "### Purpose and Background\n",
     "\n",
+    "My experience visiting Las Vegas one week after the worst mass shooting in U.S. history where 58 people were killed and almost 600 wounded chilled my heart. Witnessing first hand the concert grounds upon which so many people had died or had been wounded, knowing I could have been one of them had the shooting happened just a week later, motivated me to write about and research this topic.\n",
+    "\n",
     "My purpose is to uncover any truths surrounding the gun \"issue\" in the United States as it relates to mass shootings only. Is it really, as many right-wing politicians say, only a mental-health issue? Some say it isn't a white male problem, and they deflect, pointing to the Washington DC snipers who were both African American, the Virginia Tech shooter who was South Korean. \n",
     "\n",
     "The deflection continues, with some lawmakers saying trucks are used to kill, so, as the logic goes, should we ban trucks? Others say that people will still find guns illegally, and that any attempt to control guns will only hurt law-abiding gun owners. It has been shown that mass killings in the United States are most often carried out with guns, usually handguns, most of them obtained legally [3].\n",
     "\n",
     "The intransigence against even attempting to research *if* there is a problem with gun violence reached a nadir in 1997. Congress cut funding for the CDC by the exact amount that had been spent on gun research in the year before, citing the CDC should be prevented from doing any research that \"advocate or promote gun control\". [4] This put a chilling affect on gun violence research for over a decade. The fact that there is not a single place where you can go to find complete data on gun violence has something to do with how taboo it is seen by many public officials in the U.S.\n",
     "\n",
-    "My hope is that I will show how ridiculous the intransigence is. Before embarking on this research, I already believe the sheer number of untrained, unlicensed, well-armed, angry people in this country are making the United States a terrorized country from within, nevermind the external threat of terrorism, and its impact across the culture is a chilling affect affecting everyone's quality of life. My experience visiting Las Vegas a week after the worst mass shooting in history chilled my heart. Witnessing first hand the field upon which so many people had died or had been wounded, knowing I could have been one of them had the shooting happened a week later, motivated me to write about and research this topic.\n",
+    "My hope is that I will show how ridiculous the intransigence is. Before embarking on this research, I already believe the sheer number of untrained, unlicensed, well-armed, angry people in this country are making the United States a terrorized country from within, nevermind the external threat of terrorism, and its impact across the culture is a chilling affect affecting everyone's quality of life. \n",
     "\n",
     "### Definitions\n",
     "\n",
